--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
 							<!-- Item Project and Filter Name -->
                         	<li class="item-thumbs span3 design">
                             	<!-- Fancybox - Gallery Enabled - Title - Full Image -->
-                            	<a href="https://twitter.com/" class="hover-wrap fancybox" data-fancybox-group="gallery" title="The City" href="include/img/work/full/image-01-full.jpg">
+                            	<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Todo app" href="todos">
                                 	<span class="overlay-img"></span>
                                     <span class="overlay-img-thumb font-icon-plus"></span>
                                 </a>
                                 <!-- Thumb Image and Description -->
-                                <img src="include/img/work/thumbs/image-01.jpg" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis elementum odio. Curabitur pellentesque, dolor vel pharetra mollis.">
+                                <img src="include/img/todo.png" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis elementum odio. Curabitur pellentesque, dolor vel pharetra mollis.">
                             </li>
                         	<!-- End Item Project -->
                             
@@ -451,7 +451,7 @@
     	<div class="row">
             <div class="span12">
                 <div class="follow">
-                    <a href="https://twitter.com/Bluxart" title="Follow Me on Twitter" target="_blank"><i class="font-icon-social-twitter"></i></a>
+                    <a href="https://twitter.com/" title="Follow Me on Twitter" target="_blank"><i class="font-icon-social-twitter"></i></a>
                 </div>
                     
                 <div id="ticker" class="query"> 
@@ -508,7 +508,8 @@
 <script src="include/js/jquery.isotope.js"></script> <!-- Isotope Filter -->
 <script src="include/js/jquery.fancybox.pack.js"></script> <!-- Fancybox -->
 <script src="include/js/jquery.fancybox-media.js"></script> <!-- Fancybox for Media -->
-<script src="include/js/jquery.tweet.js"></script> <!-- Tweet -->
+<!-- <script src="include/js/jquery.tweet.js"></script>  -->
+<!-- Tweet -->
 <script src="include/js/plugins.js"></script> <!-- Contains: jPreloader, jQuery Easing, jQuery ScrollTo, jQuery One Page Navi -->
 <script src="include/js/main.js"></script> <!-- Default JS -->
 <!-- End Js -->
